examples/minikube/dns-sw-app.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mediabot
  labels:
    org: empire
    class: mediabot
spec:
  containers:
  - name: mediabot
    image: docker.io/tgraf/netperf
---
apiVersion: v1
kind: Pod
metadata:
  name: spaceship
  labels:
    org: empire
    class: spaceship
spec:
  containers:
  - name: spaceship
    image: docker.io/tgraf/netperf
