examples/minikube/dns_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "to-fqdn"
specs:
  - endpointSelector:
      matchLabels:
        org: empire
    egress:
      - toFQDNs:
          - matchName: "starwars.covalent.link"  
  - endpointSelector:
      matchLabels: {}
    egress:
      - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
        toPorts:
        - ports:
          - port: "53"
            protocol: UDP
