examples/minikube/l3_l4_policy_deprecated.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: access-backend-deprecated
spec:
  podSelector:
    matchLabels:
      id: app1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          id: app2
    ports:
    - port: 80
      protocol: TCP
