examples/minikube/malformed_policy.yaml

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "A rule that will break your policy watcher"
metadata:
  name: "badrule"
spec:
  podSelector:
    matchLabels:
      id: app3
  egress:
    toCIDR:
      podSelector:
        ip: 8.8.8.8/32
